--- a/Sparkt.WebApp/Web.config
+++ b/Sparkt.WebApp/Web.config
@@ -72,7 +72,7 @@
     </assemblyBinding>
   </runtime>
   <system.webServer>
-     <rewrite>
+     <!--<rewrite>
             <rules>
               <rule name="Redirect t and c" stopProcessing="true">
                     <match url="index.php" />
@@ -274,10 +274,10 @@
                      <match url="work-nach-baliye-8.php" />
                     <action type="Redirect" url="work/NachBaliye8"  redirectType="Permanent" />
                 </rule>
-             <!--<rule name="Redirect t50 and c50" stopProcessing="true">
+             --><!--<rule name="Redirect t50 and c50" stopProcessing="true">
                      <match url="work/bql.php" />
                     <action type="Redirect" url="/"  redirectType="Permanent" />
-                </rule>-->             
+                </rule>--><!--             
                <rule name="Redirect t51 and c51" stopProcessing="true">
                      <match url="siddhivinayakgroup/" />
                     <action type="Redirect" url="/"  redirectType="Permanent" />
@@ -331,7 +331,7 @@
                 <action type="Redirect" url="work/IndiaRF"  redirectType="Permanent" />
               </rule>
               </rules>
-        </rewrite>
+        </rewrite>-->
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
       <remove name="ApplicationInsightsWebTracking" />
